--- a/redux-blogs-app/app/package.json
+++ b/redux-blogs-app/app/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "cypress": "^13.6.4",
     "eslint": "^8.55.0",
     "eslint-plugin-cypress": "^2.15.1",
@@ -40,6 +41,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   },
   "jest": {
